name: tessitura-api
version: 0.0.1
synopsis: The Tessitura REST API v14
homepage: https://github.com/royaloperahouse/tessitura-api
license: BSD3
license-file: LICENSE
author: Richard Lewis
maintainer: richard.lewis@roh.org.uk
copyright: (C) 2018, Richard Lewis
category: Web
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules: Tessitura.Api.V14.Api
                 , Tessitura.Api.V14.Models
  -- other-modules: 
  -- other-extensions: 
  build-depends: base
               , aeson
               , bytestring
               , servant
               , time
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall
